[package]
name = "learning_rust_async_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
pin-project = "1.1.2"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
sysinfo = { version = "0.29.7", features = ["serde"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["compat", "io"] }
